# TennisScoringSystem

./: CMakeLists.txt  README.md  run
include/: TennisGameAdvantageScoringSystem.h  TennisGameScoringSystem.h  TennisGameTieBreakScoringSystem.h  TennisScoringSystem.h  TennisSetScoringSystem.h
src/: TennisGameAdvantageScoringSystem.cpp  TennisGameScoringSystem.cpp  TennisGameTieBreakScoringSystem.cpp  TennisScoringSystem.cpp  TennisSetScoringSystem.cpp  main.cpp
test/: TennisGameScoringSystemTest_utest.cpp  TennisScoringSystemTest_utest.cpp  TennisSetScoringSystemTest_utest.cpp
